--- a/Storedata/.classpath
+++ b/Storedata/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/lombok.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/mysql-connector-java-8.0.26.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
